# seekguidance

./: MANIFEST.in  README.md  default.nix  flake.nix  lock.x86_64-darwin.json  pyproject.toml  seekguidance.py  setup.py
grammars/: darksouls.json
seekguidance/: __init__.py  main.py
seekguidance/presets/: bloodborne.json  darksouls2.json  darksouls2patch.json  darksouls3.json  demonssouls-remake-fi.json  demonssouls.json  eldenring.json  lanternrite.json
